syntax = "proto2";

package com.scalableminds.webknossos.datastore;

message Id32ToBool {
  required int32 id = 1;
  required bool value = 2;
}

message Id64ToBool {
  required int64 id = 1;
  required bool value = 2;
}
